2005-09-28  Christian Persch  <chpe@cvs.gnome.org>

	* src/window-commands.c: (window_cmd_file_bookmark_page):

	Don't free const strings.

2005-09-28  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-notebook.c: (sync_label):
	* src/ephy-tab.c: (ephy_tab_get_title_composite),
	(ephy_tab_get_title):
	* src/ephy-tab.h:
	* src/ephy-tabs-menu.c: (sync_tab_title):
	* src/ephy-window.c: (sync_tab_title):
	* src/window-commands.c: (window_cmd_file_send_to),
	(window_cmd_file_bookmark_page):

	Add a function to get the tab's real title, and use it
	where appropriate. Fixes bug #317418.

2005-09-28  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* embed/mozilla/FilePicker.cpp:

	Hide the filters combo if there's only the "All" filter.

2005-09-27  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-common.js:

	Back out the fix for bug #158486 by re-enabling keyword:
	searches. Fixes bug #314974.

2005-09-26  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-notebook.c: (tab_label_style_set_cb),
	(build_tab_label):

	Use the tab label's outer hbox for the size calculation instead
	of the label itself. Fixes size oscillations with the Tab States
	extension.

2005-09-21  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyUtils.cpp:
	* embed/print-dialog.c: (ephy_print_do_print_idle_cb):

	Don't use "cat >" as output command, it fails inpredicably.
	Instead, use the tempfile setting, and set "PostScript/default"
	as printer name. fflush before printing the temp file
	using gnome-print. If not using gecko 1.9, translate the paper
	name to the one mozilla expects (mozilla bug 
	https://bugzilla.mozilla.org/show_bug.cgi?id=307404).

2005-09-19  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed.h:
	* embed/mozilla/mozilla-embed.cpp:

	Add EPHY_EMBED_STATE_RESTORING and conversion from
	GTK_MOZ_EMBED_FLAG_RESTORING.

2005-09-19  Christian Persch  <chpe@cvs.gnome.org>

	* data/mime-types-permissions.xml:

	Add another mime alias.
