@@ -1,3 +1,9 @@
+2005-09-26  Christian Persch  <chpe@cvs.gnome.org>
+
+	* embed/mozilla/EphyAboutModule.cpp:
+
+	Return error on failure.
+
 2005-09-28  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/window-commands.c: (window_cmd_file_bookmark_page):
